
Wed Aug 14 17:24:21 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c: set correct name in arrays.

2002-08-13  Dietmar Maurer  <dietmar@ximian.com>

	* appdomain.c (mono_domain_transfer_object): make it work with
	valuetypes. bug fixes.

2002-08-12  Dick Porter  <dick@ximian.com>

	* object.h: Rename some parameters to avoid c++ keywords (Patch
	from Joseph Wenninger <kde@jowenn.at>)

Thu Aug 8 13:04:18 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: added icall to implement Assembly.GetFile*.

Thu Aug 8 10:18:17 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.h, reflection.c: code to embed managed resources.

Tue Aug 6 17:59:44 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c: move all the type size stuff into
	class_compute_field_layout().

Tue Aug 6 11:20:49 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c: ensure enums have always the correct instance size.
	* unicode.c: remove wrong assert.

Mon Aug 5 19:30:04 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* assembly.c: fix mem corruption issue.
	* image.h, image.c: added mono_image_get_resource () to access
	managed resources.
	* icall.c: implemented Assembly.EntryPoint property and some
	Managed Resources related internalcalls.


Mon Aug 5 18:18:03 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* image.c, image.h: impemented mono_image_get_entry_point ().
	* appdomain.c: use mono_image_get_entry_point.

Mon Aug 5 13:08:15 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: support the object type argument when loading
	custom attributes.

2002-08-05  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_managed_wrapper): add suppport for
	String as return type.

Fri Aug 2 21:15:42 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fix encoding of named args for custom attrs to match
	the ms implementation. Read them back when instantiating custom
	attributes.

2002-08-02  Radek Doulik  <rodo@ximian.com>
